# a2a-lint

./: LICENSE  README.md  action.yml  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
a2a_lint/: __init__.py  cli.py  client.py  validator.py
server/: Dockerfile  a2a_client.py  a2a_lint.py  card_validator.py  main.py  monitor.py  requirements.txt  store.py
server/static/: index.html  status.html
