[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-lint"
version = "0.1.0"
description = "Conformance linter for A2A agents — agent card validation, live message/send probes, CI-friendly exit codes."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Vivek", email = "2421990vivek@gmail.com" }]
keywords = ["a2a", "a2a-protocol", "agent2agent", "ai-agents", "linter", "conformance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/vivek24290/a2a-lint"
Issues = "https://github.com/vivek24290/a2a-lint/issues"

[project.scripts]
a2a-lint = "a2a_lint.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["a2a_lint"]
